<resources>
    <string name="app_name">insightloop</string>
    <string name="app_title">Feedback App</string>
    <string name="home_message">Feedback is critical for your learner to improve. It is mandatory to give at least two feedbacks for a regular session</string>
    <string name="learners_proficiency_description">Tell us a bit about your learners\' English proficiency</string>
    <string name="improvement_scope">Scope of Improvement</string>
    <string name="select_specifics">Choose Specifics</string>
    <string name="go_to_dashboard">Go To Dashboard</string>
    <string name="complete">Done</string>
    <string name="submit_button">Submit</string>
    <string name="additional_notes">Write anything else here</string>
    <string name="feedback_note">Note: For regular sessions, there should be at least one feedback in each category.</string>
    <string name="icon_label">Icon</string>
    <string name="arrow_label">Arrow</string>
    <string name="close">Cross</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thank_you_emoji">Thank You Emoji</string>
    <string name="thank_you_for_giving_feedback">Thank You for Giving Feedback</string>




    <string name="tell_us_a_bit_about_your_learners_english_proficiency">Tell us a bit about your learners English proficiency</string>
    <string name="home_content">Feedback is critical for your learner to improve. It is mandatory to give atleast two feedbacks for regular session</string>
    <string name="icon">Icon</string>
    <string name="arrow">Arrow</string>
    <string name="scope_of_improvement">Scope of Improvement</string>
    <string name="choose_specifics">Choose Specifics</string>
    <string name="done">Done</string>
    <string name="cross">cross</string>
    <string name="write_anything_else_here">Write anything else here</string>
    <string name="submit">Submit</string>
    <string name="note_for_regular_sessions_there_should_be_at_least_one_feedback_in_each_category">Note: For regular sessions, there should be at least one feedback in each category.</string>
</resources>