<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        tools:context=".presentation.thankYou.ThankYouFragment">
        <ImageView
            android:id="@+id/iv_thankYou"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="170dp"
            android:contentDescription="@string/thank_you_emoji"
            android:src="@drawable/ic_thank_you_emoji"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_thankYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_for_giving_feedback"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_thankYou" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/light_green"
            android:padding="12dp"
            android:text="@string/go_to_dashboard"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_thankYou" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>