<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:id="@+id/ll_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/iv_categoryIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/icon"
                tools:src="@drawable/ic_confidence" />

            <TextView
                android:id="@+id/tv_CategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/gray_light"
                android:textSize="19sp"
                android:textStyle="bold"
                tools:text="Confidence" />

            <TextView
                android:id="@+id/tv_feedbackCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:gravity="center"
                android:background="@drawable/ic_circle_black"
                android:textStyle="bold"
                tools:text="1" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/iv_arrow"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/arrow"
                android:src="@drawable/ic_arrow" />
        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_light"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_category" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_feedbackItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
            android:id="@+id/et_feedback"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="16dp"
            android:gravity="top"
            android:hint="@string/write_anything_else_here"
            android:background="@drawable/bg_text_feild"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            android:textColor="@color/gray_dark"
            android:textColorHint="@color/gray_light"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>